--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-#VUE_APP_MOCK_API=/
+#说明https://cli.vuejs.org/guide/mode-and-env.html#modes
+#变量必须以VUE_APP_开头
 VUE_APP_MOCK_API=https://easy-mock.com/mock/5950a2419adc231f356a6636/vue-admin
