--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VUE_APP_ACCOUNT_API=http://127.0.0.1:8081/api
-VUE_APP_PASSPORT_API=http://127.0.0.1:8082/api
-VUE_APP_PAY_API=http://127.0.0.1:8083/api
-VUE_APP_MOVIE_API=http://127.0.0.1:8084/api
+VUE_APP_ACCOUNT_API=http://127.0.0.1:8085/
+VUE_APP_PASSPORT_API=http://127.0.0.1:8085/
+VUE_APP_PAY_API=http://127.0.0.1:8085/
+VUE_APP_MOVIE_API=http://127.0.0.1:8085/
