1。修改了弹窗背景颜色。

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-VUE_APP_MOVIE_API=http://movies.order.com/api
-VUE_APP_ACCOUNT_API=http://union.com/api
-VUE_APP_PASSPORT_API=http://passport.com/api
-VUE_APP_PAY_API=http://pay.coocaa.com/api
+VUE_APP_ACCOUNT_API=http://172.20.133.35:8085/
+VUE_APP_PASSPORT_API=http://172.20.133.35:8085/
+VUE_APP_PAY_API=http://172.20.133.35:8085/
+VUE_APP_MOVIE_API=http://172.20.133.35:8085/
