添加津贴功能

--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ VUE_APP_ACCOUNT_API=http://mgr.union.coocaa.com:6085/
 VUE_APP_PASSPORT_API=http://mgr.union.coocaa.com:6085/
 VUE_APP_PAY_API=http://mgr.union.coocaa.com:6085/
 VUE_APP_MOVIE_API=http://mgr.union.coocaa.com:6085/
+VUE_APP_SUBSIDY_API=http://mgr.union.coocaa.com:6085/
