--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ VUE_APP_ACCOUNT_API=http://127.0.0.1:6085/
 VUE_APP_PASSPORT_API=http://127.0.0.1:6085/
 VUE_APP_PAY_API=http://127.0.0.1:6085/
 VUE_APP_MOVIE_API=http://127.0.0.1:6085/
+VUE_APP_SUBSIDY_API=http://127.0.0.1:6085/
