--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@ VUE_APP_ACCOUNT_API=http://172.20.155.206:6085/
 VUE_APP_PASSPORT_API=http://172.20.155.206:6085/
 VUE_APP_PAY_API=http://172.20.155.206:6085/
 VUE_APP_MOVIE_API=http://172.20.155.206:6085/
+VUE_APP_SUBSIDY_API=http://172.20.155.206:6085/
