--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/nprogress": "^0.0.29",
     "@types/webpack-env": "^1.13.6",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.3.6",
     "js-cookie": "^2.2.0",
     "normalize.css": "^8.0.0",
