--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@vue/cli-service": "^3.0.1",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.5.0",
     "jest": "^23.5.0",
     "node-sass": "^4.9.0",
+    "path": "^0.12.7",
     "sass-loader": "^7.0.1",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
