--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "^7.0.1",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "vue-cli-plugin-element-ui": "^1.1.2",
     "vue-template-compiler": "^2.5.17"
   }
