1. 修改正式请求地址。

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-VUE_APP_ACCOUNT_API=http://mgr.union.coocaa.com:6085/
-VUE_APP_PASSPORT_API=http://mgr.union.coocaa.com:6085/
-VUE_APP_PAY_API=http://mgr.union.coocaa.com:6085/
-VUE_APP_MOVIE_API=http://mgr.union.coocaa.com:6085/
-VUE_APP_SUBSIDY_API=http://mgr.union.coocaa.com:6085/
+VUE_APP_ACCOUNT_API=https://api-union.coocaa.com/
+VUE_APP_PASSPORT_API=https://api-union.coocaa.com/
+VUE_APP_PAY_API=https://api-union.coocaa.com/
+VUE_APP_MOVIE_API=https://api-union.coocaa.com/
+VUE_APP_SUBSIDY_API=https://api-union.coocaa.com/
