--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,5 @@ VUE_APP_PASSPORT_API=http://172.20.155.206:6085/
 VUE_APP_PAY_API=http://172.20.155.206:6085/
 VUE_APP_MOVIE_API=http://172.20.155.206:6085/
 VUE_APP_SUBSIDY_API=http://172.20.155.206:6085/
+VUE_APP_CHANNEL=coocaa
+VUE_APP_APP_NAME=深圳市酷开网络科技有限公司
