系统激活管理后台

--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,6 @@ VUE_APP_PASSPORT_API=https://api-union.coocaa.com/
 VUE_APP_PAY_API=https://api-union.coocaa.com/
 VUE_APP_MOVIE_API=https://api-union.coocaa.com/
 VUE_APP_SUBSIDY_API=https://api-union.coocaa.com/
+VUE_APP_ACTIVE_API=https://api-union.coocaa.com/
 VUE_APP_CHANNEL=coocaa
 VUE_APP_APP_NAME=深圳市酷开网络科技有限公司
