1、修改了江苏有线配置信息，并将 elemnt-ui的版本降级，测试江苏有线的详情页卡死的情况。

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+NODE_ENV=production
 VUE_APP_ACCOUNT_API=https://api-union.coocaa.com/
 VUE_APP_PASSPORT_API=https://api-union.coocaa.com/
 VUE_APP_PAY_API=https://api-union.coocaa.com/
