--- a/.env.production-jscn
+++ b/.env.production-jscn
@@ -1,3 +1,4 @@
+NODE_ENV=production
 VUE_APP_ACCOUNT_API=https://jscn-api-union.coocaa.com/
 VUE_APP_PASSPORT_API=https://jscn-api-union.coocaa.com/
 VUE_APP_PAY_API=https://jscn-api-union.coocaa.com/
