--- a/package.json
+++ b/package.json
@@ -23,25 +23,26 @@
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17",
+    "vue": "2.6.10",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
+    "vue-router": "3.0.1",
     "vue-svgicon": "^3.1.0",
-    "vuex": "^3.0.1",
-    "vuex-class": "^0.3.1",
-    "vuex-module-decorators": "^0.4.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "3.0.1",
+    "vuex-class": "0.3.1",
+    "vuex-module-decorators": "0.4.3",
     "webpack": "^4.17.2"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
-    "@types/node": "^11.13.7",
-    "@vue/cli-plugin-babel": "^3.0.1",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.1",
-    "@vue/cli-plugin-pwa": "^3.0.1",
-    "@vue/cli-plugin-typescript": "^3.0.1",
-    "@vue/cli-plugin-unit-jest": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
+    "@types/node": "11.13.7",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-e2e-cypress": "^3.10.0",
+    "@vue/cli-plugin-pwa": "^3.10.0",
+    "@vue/cli-plugin-typescript": "^3.10.0",
+    "@vue/cli-plugin-unit-jest": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "compression-webpack-plugin": "^2.0.0",
@@ -50,10 +51,8 @@
     "node-sass": "^4.9.0",
     "path": "^0.12.7",
     "sass-loader": "^7.0.1",
-    "ts-jest": "^23.0.0",
-    "typescript": "^3.0.0",
+    "typescript": "3.1.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "vue-cli-plugin-element-ui": "^1.1.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-cli-plugin-element-ui": "^1.1.2"
   }
 }
